--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "scripts": { "cy:run": "cypress run","cy:open": "cypress open"}
   },
   "keywords": [],
   "author": "",
@@ -12,4 +13,5 @@
   "dependencies": {
     "typescript": "^5.3.2"
   }
+ 
 }
