--- a/package.json
+++ b/package.json
@@ -3,10 +3,9 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "scripts": { "cy:run": "cypress run","cy:open": "cypress open", "cy:run-login": "cypress run -env standard_user='{'username':'standard_user','password':'secrec_sauce'}' --spec 'cypress/e2e/tests/test_login.cy.ts'" }
-  },
+  "scripts": { "cy:run": "cypress run","cy:open": "cypress open", 
+  "cy:run-login": "cypress run -env standard_user='{'username':'standard_user','password':'secrec_sauce'}' --spec 'cypress/e2e/tests/test_login.cy.ts'", 
+  "test": "echo \"Error: no test specified\" && exit 1" },
   "keywords": [],
   "author": "",
   "license": "ISC",
